# ghs

./: .gitignore  LICENSE  README.md  __init__.py  _pixi.toml  app.py  ghs-0.1.0-pyh4616a5c_0.conda  main.py  pixi.toml  pyproject.toml
src/ghs/: __init__.py  app.py  cfg.py  main.py
