[project]
name = "ghs"
version = "0.1.0"
authors = [{name = "zuble", email = "67658465+zuble@users.noreply.github.com"}]
description = "github stars manager"
requires-python = ">= 3.11"
dependencies = [
    "click>=8.3.1,<9",
    "pyrootutils>=1.0.4,<2",
    "requests>=2.32.5,<3",
    "rich>=14.2.0,<15",
    "bs4>=0.0.2,<0.0.3",
    "inquirerpy @ git+https://github.com/zuble/InquirerPy.git@master",
]
[project.scripts]
ghs = "ghs.main:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true

## -----------------
## PIXI
[tool.pixi.workspace]
name = "ghs"
version = "0.1.0"
authors = ["zuble <67658465+zuble@users.noreply.github.com>"]
channels = ["conda-forge", "pypi"]
platforms = ["linux-64"]
preview = ["pixi-build"]

[tool.pixi.dependencies]

[tool.pixi.pypi-dependencies]
ghs = { path = ".", editable = true }
# inquirerpy = { git = "https://github.com/zuble/InquirerPy.git", rev = "master" }
# bs4 = ">=0.0.2, <0.0.3"
# pyrootutils = ">=1.0.4, <2"
# requests = ">=2.32.5, <3"
# rich = ">=14.2.0, <15"
# click = ">=8.3.1, <9"

[tool.pixi.package]
name = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
# description = { workspace = true }
# documentation = { workspace = true }
# homepage = { workspace = true }
# license = { workspace = true }
# license-file = { workspace = true }
# readme = { workspace = true }
# repository = { workspace = true }

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "*" }

# [tool.pixi.package.build.config]
# ignore-pypi-mapping = true

[tool.pixi.package.host-dependencies]
hatchling = "*"
uv = "*"

[tool.pixi.tasks]
main="python src/ghs/main.py"
